[package]
name = "antiminer-rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
lazy_static = "1.4.0"
zip = "0.5.11"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tui = { package = "ratatui", version = "0.22.0", features = ["all-widgets"]}
